# NationBuildingSim

./: .gitignore  CMakeLists.txt  README.md
src/: gameUI.cpp  main.cpp  utilities.cpp
src/Classes/: nation.cpp  nationTests.cpp  provice.cpp  province.cpp  provinceTests.cpp
src/Classes/headers/: provice.hpp
